--- a/style/desafio.css
+++ b/style/desafio.css
@@ -6,6 +6,7 @@
     list-style: none;
     text-decoration: none;
     box-sizing: border-box;
+    color: var(--text-color2);
 }
 
 :root {
@@ -26,12 +27,12 @@ html {
 
 body {
     font-size: 12px;
-    font-family: var(--text)
+    font-family: var(--text);
 }
 
 .menu {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     padding: 0.2rem;
     width: auto;
@@ -39,14 +40,14 @@ body {
     background: linear-gradient(var(--bgd-color1), var(--bgd-color2) 90%, var(--bgd-color1));
 }
 
-.btn-li {
+.btn-menu {
     border: 0.1rem solid var(--border-color);
     border-radius: 4px;
     padding: 0.7rem;
     background: var(--bgd-color2);
 }
 
-.btn-li:hover {
+.btn-menu:hover {
     background: var(--hover-color);
     transform: scale(1.2);
 }
@@ -55,29 +56,80 @@ body {
     color: var(--text-color2);
 }
 
+.btn-desafio {
+    padding: 0.7rem;
+    margin: 2rem 0 2rem 0;
+    font-family: var(--text);
+    border-radius: 4px;
+    cursor: pointer;
+    border: 0.1rem solid var(--border-color);
+    background: var(--bgd-color2);
+}
+
+.btn-desafio:hover {
+    background: var(--hover-color);
+    transform: scale(1.2);
+}
+
 .container {
     width: 100%;
     height: 100vh;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     color: var(--text-color2);
     background: linear-gradient(30deg, var(--bgd-color1), var(--bgd-color2) 50%, var(--bgd-color1));
 }
 
+.logo-7days:hover {
+    transform: scale(1.2);
+}
+
 .titulo-principal {
+    display: inline-block;
     font-size: 1.5rem;
     padding: 2rem;
+    text-align: center;
 }
 
 .titulo-principal:hover {
     background-color: var(--hover-color);
     border-radius: 10px;
     transform: scale(1.1);
+    border: 0.1rem solid var(--border-color);
 }
 
 .texto-principal {
     font-size: 1rem;
-    padding: 1rem;
+    padding: 3rem 0 0 0;
+    text-align: center;
+}
+
+.texto-desafio {
+    display: inline-block;
+    font-size: 1rem;
+    padding: 2rem;
+    margin: 2rem;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 10px;
+    border: 0.1rem solid var(--border-color);
+}
+
+.texto-desafio:hover {
+    background-color: var(--hover-color);
+}
+
+@media screen and (max-width: 380px) {
+    .html {
+        overflow-x: scroll;
+        overflow-y: scroll;
+    }
+
+    .menu {
+        width: 100%;
+        height: 15vh;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    }
 }
