--- a/style/index.css
+++ b/style/index.css
@@ -6,6 +6,7 @@
     list-style: none;
     text-decoration: none;
     box-sizing: border-box;
+    color: var(--text-color2);
 }
 
 :root {
@@ -16,22 +17,22 @@
     --text-color2: #000000;
     --border-color: #000000;
 
-    --text:'Press Start 2P', cursive;
+    --text: 'Press Start 2P', cursive;
 }
 
 html {
-    overflow-x:hidden;
-    overflow-y:hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
 }
 
 body {
     font-size: 12px;
-    font-family: var(--text)
+    font-family: var(--text);
 }
 
 .menu {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     padding: 0.2rem;
     width: auto;
@@ -67,10 +68,12 @@ body {
 }
 
 .logo-7days {
-    animation: slideout 5s ease-in-out both;
+    animation: zoomin 5s ease-in-out both;
 }
 
 .titulo-principal {
+    display: inline-block;
+    text-align: center;
     font-size: 1.5rem;
     padding: 2rem;
 }
@@ -85,6 +88,7 @@ body {
 .texto-principal {
     font-size: 1rem;
     padding: 1rem;
+    text-align: center;
 }
 
 .link-desafio {
@@ -109,25 +113,30 @@ body {
     border: 0.1rem solid var(--border-color);
 }
 
-@keyframes slideout {
+@keyframes zoomin {
     0% {
         width: 0%;
-      }
-    
-    25% {
-        width: 25%;
-      }
+    }
 
     50% {
-        width: 50%;
-      }
+        width: 60%;
+    }
 
-    75% {
-          width: 60%;
-        }
-      
     100% {
-        width: 359px;
-      }
+        width: 375px;
+    }
+}
 
+@media screen and (max-width: 380px) {
+    .html {
+        overflow-x: scroll;
+        overflow-y: scroll;
+    }
+
+    .menu {
+        width: 100%;
+        height: 15vh;
+        justify-content: space-evenly;
+        flex-wrap: wrap;
+    }
 }
