--- a/style/index.css
+++ b/style/index.css
@@ -32,7 +32,7 @@ body {
 
 .menu {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     padding: 0.2rem;
     width: auto;
@@ -40,14 +40,14 @@ body {
     background: linear-gradient(var(--bgd-color1), var(--bgd-color2) 90%, var(--bgd-color1));
 }
 
-.btn-li {
+.btn-menu {
     border: 0.1rem solid var(--border-color);
     border-radius: 4px;
     padding: 0.7rem;
     background: var(--bgd-color2);
 }
 
-.btn-li:hover {
+.btn-menu:hover {
     background: var(--hover-color);
     transform: scale(1.2);
 }
@@ -135,8 +135,13 @@ body {
 
     .menu {
         width: 100%;
-        height: 15vh;
-        justify-content: space-evenly;
+        height: auto;
+        justify-content: space-around;
         flex-wrap: wrap;
+    }
+
+    .btn-menu {
+        margin-top: 0.5rem;
+        margin-bottom: 0.5rem;
     }
 }
