--- a/style/desafio.css
+++ b/style/desafio.css
@@ -17,12 +17,13 @@
     --text-color2: #000000;
     --border-color: #000000;
 
-    --text:'Press Start 2P', cursive;
+    --text: 'Press Start 2P', cursive;
 }
 
 html {
-    overflow-x:hidden;
-    overflow-y:hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    min-width: 365px;
 }
 
 body {
@@ -122,7 +123,7 @@ body {
     background-color: var(--hover-color);
 }
 
-@media screen and (max-width: 380px) {
+@media screen and (max-width: 440px) {
     .html {
         overflow-x: scroll;
         overflow-y: scroll;
@@ -130,11 +131,11 @@ body {
 
     .menu {
         width: 100%;
-
         flex-wrap: wrap;
     }
 
     .btn-menu {
+        padding: 0.5rem;
         margin: 0.5rem;
     }
 }
